--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-parallax-tilt": "^1.5.74",
+    "react-particles-js": "^3.6.0",
     "react-scripts": "4.0.3",
+    "react-tsparticles": "^1.37.2",
+    "tachyons": "^4.12.0",
+    "tsparticles": "^1.37.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -34,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "clarifai": "^2.9.1"
   }
 }
